added action buttons

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -18,6 +18,24 @@
   width: 100%;
 }
 
+.card-action {
+  position: absolute;
+  color: rgba(173, 173, 173, 0.8);
+  &:hover {
+    color: rgba(173, 173, 173, 1);
+  }
+}
+
+.card-destroy {
+  top: 8px;
+  right: 8px;
+}
+
+.card-edit {
+  bottom: 8px;
+  right: 8px;
+}
+
 .card-product img {
   height: 100%;
   width: 120px;
