--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -1,4 +1,5 @@
 <div class="container mt-5">
+  <p><%= link_to '< Back', pets_path, class: 'btn-light' %></p>
   <div class="card-product">
     <%= image_tag "http://source.unsplash.com/featured/?#{@pet.species}&#{rand(1000)}"%>
     <div class="card-product-infos">
@@ -6,6 +7,11 @@
       <p><%= @pet.address %></p>
       <p>Found <%= pluralize(@pet.found_days_ago, 'day') %> ago</p>
     </div>
-    <%= link_to '', pet_path(@pet), class: 'card-link' %>
+    <%= link_to pet_path(@pet), method: :delete, data: { confirm: "Remove #{@pet.name}?"}, class: 'card-action card-destroy' do %>
+      <i class="fas fa-times"></i>
+    <% end %>
+    <%= link_to edit_pet_path(@pet), class: 'card-action card-edit' do %>
+      <i class="fas fa-pencil-alt"></i>
+    <% end %>
   </div>
 </div>
