--- a/app/views/pets/edit.html.erb
+++ b/app/views/pets/edit.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
   <h1>Update <%= @pet.name %></h1>
   <%= render 'pets/form', pet: @pet %>
+  <p><%= link_to '< Back', pet_path(@pet), class: 'btn-light' %></p>
 </div>
