--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,7 +1,9 @@
 <div class="container mt-5">
   <div class="d-flex align-items-center justify-content-between">
     <h1>Found Pets</h1>
-    <!-- Add link to new pet here -->
+    <%= link_to new_pet_path do %>
+      <i class="fas fa-plus btn-light"></i>
+    <% end %>
   </div>
   <div class="cards">
     <% @pets.each do |pet| %>
