--- a/app/views/pets/new.html.erb
+++ b/app/views/pets/new.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
   <h1>Add Found Pet</h1>
   <%= render 'pets/form', pet: @pet %>
+  <p><%= link_to '< Back', pets_path, class: 'btn-light' %></p>
 </div>
